test/suites/fail-lower/L-019c.expected
  × One or more errors occured.

Error: L-019

  × Invalid infix declaration: The right hand side of an infix declaration must have the form "T(_,_)".
   ╭─[L-019c.pol:1:17]
 1 │ infix _ -> _ := Fun(a,b)
   ·                 ────────
   ╰────
