test/suites/fail-lower/L-019c.pol
infix _ -> _ := Fun(a,b)